--- a/exo1/index.html
+++ b/exo1/index.html
@@ -6,6 +6,11 @@
     <title>Algorithmics with JavaScript - Exercice 1</title>
 </head>
 <body>
-    <script src="app.js" type="text/javascript"></script>   
+        <h2>Exercice 1.1</h2>
+       <div id="display1"></div>
+       <br>
+       <h2>Exercice 1.2</h2>
+       <div id="display2"></div>
 </body>
+<script src="app.js" type="text/javascript"></script>
 </html>
